gccida/c1/write_dependence_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/write_dependence_p/src/alias.c:2666:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/write_dependence_p/src/alias.c:2667:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)mem + 2)) ) 
  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/write_dependence_p/src/obj/alias.o] Error 1
